Fix '.completed-projects__image' not overflow hidden

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
     width: 40%;
     margin-left: 9%;
     padding-right: 1%;
+    width: 70%;
 }
 
 .completed-projects__h2 {
@@ -188,18 +189,18 @@ body {
 .completed-projects__nav-and_image {
     margin-right: 9%;
     padding-left: 1%;
-    min-width: 680px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .completed-projects__nav {
     display: flex;
     justify-content: space-between;
     margin-bottom: 45px;
-}
-
-.completed-projects__item-nav {
-    margin-left: 1%;
-    margin-right: 1%;
+    max-width: 679px;
+    width: 100%;
 }
 
 .completed-projects__item-nav-a {
@@ -208,6 +209,8 @@ body {
     text-decoration: none;
     font-size: 14px;
     color: rgba(255, 255, 255, 0.3);
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .completed-projects__item-nav-a_current {
@@ -217,14 +220,16 @@ body {
 }
 
 .completed-projects__image {
-    content: url(./images/image\ 2.1.jpg);
-    max-width: 100%;
-    /*?*/
-    max-height: 100%;
-    /*?*/
+    height: 482px;
+    overflow: hidden;
+    background-image: url(./images/image\ 2.1.jpg);
+    background-position: center center;
+    max-width: 679px;
+    width: 100%;
 }
 
 .completed-projects__switch-images {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
